src/app/UI/client/components/data_card/theme.scss
@import "react-toolbox/components/colors";
@import "react-toolbox/components/globals";
@import "~ui-styles/colors";
@import "~ui-styles/common";

.card {
    margin-bottom: $layout-gutter-width-sm;
}

.comment {
    font-size: $font-size-small;
    font-family: "Roboto Mono";
    color: $color-text-secondary;
    white-space: pre;
    overflow: hidden;
    text-overflow: ellipsis;
}

.input {
    padding: $unit * 1.6;
}

.monospace {
    font-family: "Roboto Mono";
}

.fileListItem {
    display: block;
}

.fileListItemIcon[data-react-toolbox="font-icon"] {
    font-size: $font-size-normal;
    display: inline-block;
    margin-right: 0.6 * $unit;
    // Centered vertically, cannot use vertical-align since display is block
    vertical-align: middle;
}

.link {
    cursor: pointer;

    &:link, &:visited {
        color: $color-text-secondary;
    }

    &:hover {
        color: $cf-color-selected;
    }
}

.fileListItemLink {
    vertical-align: middle;
}

.floatRight {
    float: right;
    font-size: $font-size-small * 0.9;

    span {
        font-family: "Roboto Mono";
    }
}

.hiddenText {
    float: right;
    font-size: $font-size-small * 0.9;

    span {
        font-family: "Roboto Mono";
    }
}

.postButton {
    position: absolute;
    top: $layout-gutter-width-sm;
    right: $layout-gutter-width-sm;
    display: inline-block;
}

.avatar {
    margin-right: $unit * 1.3;
    width: 40px;
    height: 40px;
}

.table {
    width: 100%;
    font-size: $font-size-small;
    border-spacing: 0;

    tbody tr:nth-child(odd) {
        background-color: $cf-color-table-row-odd;
    }

    tr {
        border-spacing: 0;
    }

    td {
        padding: $unit $unit * 1.6;
    }

    td:first-child {
        font-weight: $font-weight-semi-bold;
    }

    td:last-child {
        color: $color-text-secondary;
    }
}

